moved perturbation application to simulation loop instead of in controller script; idk why i put it there

--- a/initial_humanoid/config.yaml
+++ b/initial_humanoid/config.yaml
@@ -20,5 +20,5 @@ config:
   simulation_timestep: 0.001
   visualize_contact_force: True
   visualize_perturbation_force: True
-  apply_perturbation: False
+  apply_perturbation: True
   controller_flag: True
