--- a/muscle_humanoid/config.yaml
+++ b/muscle_humanoid/config.yaml
@@ -1,29 +1,29 @@
 config:
   perturbation_time: 0.5
-  perturbation_magnitude: 200
+  perturbation_magnitude: 100
   perturbation_period: 2
   translation_friction_constant: 0.9
   rolling_friction_constant: 0.9
   ankle_position_setpoint: 0.0872665
   ankle_joint_initial_position: 0.0872665
-  simend: 15
+  simend: 8
   M_total: 80
   H_total: 1.78
   mp4_file_name: 'bangbang_trajectory.mp4'
   mp4_fps: 60
-  mp4_flag: False
+  mp4_flag: True
   translation_friction_constant: 0.9
   rolling_friction_constant: 0.9
   xml_path: 'muscle_humanoid.xml'
   lit_xml_file: 'literature_humanoid_muscle.xml'
   plotter_flag: False
   simulation_timestep: 0.001
-  visualize_contact_force: False
+  visualize_contact_force: True
   visualize_actuators: True
-  visualize_perturbation_force: True
+  visualize_perturbation_force: False
   apply_perturbation: False
   controller_flag: True
   camera_azimuth: 87.5
-  camera_distance: 1.5
+  camera_distance: 3.
   camera_elevation: -5.
-  camera_lookat_xyz: '0.012768, -0.000000, .1'
+  camera_lookat_xyz: '0.012768, -0.000000, 1'
