--- a/final_humanoid/config.yaml
+++ b/final_humanoid/config.yaml
@@ -1,27 +1,27 @@
 config:
   perturbation_time: 0.5                                # set the pulse width of the perturbation
-  perturbation_magnitude: 200                           # set the magnitude of the quasi-impulse 
+  perturbation_magnitude: 100                           # set the magnitude of the quasi-impulse 
   perturbation_period: 3.25                             # set the period (1/frequency) of the impulse
-  apply_perturbation: False                             # toggle this on/off to select whether the perturbation is applied or not
+  apply_perturbation: True                             # toggle this on/off to select whether the perturbation is applied or not
   ankle_position_setpoint_radians: 0.0872665            # set the ankle joint setpoint in radians
   ankle_initial_position_radians: 0.0872665             # set the initial ankle angle in radians
   foot_angle_initial_position_radians: 0                # set the initial angle of the foot
-  simend: 15                                            # set the duration for which the simulation will run
+  simend: 20                                           # set the duration for which the simulation will run
   M_total: 80                                           # total mass of the human, used for literature estimate calculations
   H_total: 1.78                                         # total height of the human, used for literature estimtae calculations
   mp4_file_name: 'pert_with_contact_force_vis.mp4'      # file name for mp4 file to be saved to, if you want to record the simultation rendering
   mp4_fps: 60                                           # video fps
-  mp4_flag: False                                       # toggle this parameter on / off to save an mp4 video with name "mp4_file_name" (two lines up)
+  mp4_flag: False                                      # toggle this parameter on / off to save an mp4 video with name "mp4_file_name" (two lines up)
   translation_friction_constant: 0.99                   # set the translationl friction constant for model geoms
   rolling_friction_constant: 0.99                       # set the rolling friction constant for model geoms
   xml_path: 'initial_humanoid.xml'                      # set the file path that the run_sim.py script will read and modify with literature estimates
   lit_xml_file: 'literature_humanoid.xml'               # set file path that run_sim.py will save literature estimate XML file too; this is loaded into the MuJoCo backend
-  plotter_flag: False                                   # toggle the Python plotters on / off
+  plotter_flag: True                                 # toggle the Python plotters on / off
   simulation_timestep: 0.0005     #0.0001               # set the simulation timestep - this attribute is critical to simulation success
-  visualize_contact_force: True                         # toggle on / off to visualize contact forces
+  visualize_contact_force: False                         # toggle on / off to visualize contact forces
   visualize_perturbation_force: True                    # toggle on / off to visualize perturbation forces
   visualize_joints: False                               # toggle on / off to visualize model joints
-  visualize_actuators: False                             # toggle on / off to visualize model actuators
+  visualize_actuators: True                             # toggle on / off to visualize model actuators
   visualize_center_of_mass: False                       # toggle on / off to visualize humanoid COM
   controller_flag: True                                 # toggle on / off to set whether controller is running or not
   gravity: -9.81                                        # set gravity (my code takes this scalar and applies it along the z-axis to match Earth gravity)
