--- a/final_humanoid/config.yaml
+++ b/final_humanoid/config.yaml
@@ -1,10 +1,7 @@
 config:
-  perturbation_time: 0.3                                # set the pulse width of the perturbation
-  perturbation_magnitude: 100                           # set the magnitude of the quasi-impulse 
-  perturbation_period: 3.25                             # set the period (1/frequency) of the impulse
-  apply_perturbation: False                             # toggle this on/off to select whether the perturbation is applied or not
+  
   ankle_position_setpoint_radians: 0.0872665         # set the ankle joint setpoint in radians
-  ankle_initial_position_radians:  0.08726 #0.0872665             # set the initial ankle angle in radians
+  ankle_initial_position_radians:  0.0872 #0.0872665             # set the initial ankle angle in radians
   foot_angle_initial_position_radians: 0                # set the initial angle of the foot
   simend: 15                                           # set the duration for which the simulation will run
   M_total: 80                                           # total mass of the human, used for literature estimate calculations
@@ -16,7 +13,7 @@ config:
   rolling_friction_constant: 0.99                       # set the rolling friction constant for model geoms
   xml_path: 'initial_humanoid.xml'                      # set the file path that the run_sim.py script will read and modify with literature estimates
   lit_xml_file: 'literature_humanoid.xml'               # set file path that run_sim.py will save literature estimate XML file too; this is loaded into the MuJoCo backend
-  plotter_flag: False                                 # toggle the Python plotters on / off
+  plotter_flag: True                                 # toggle the Python plotters on / off
   simulation_timestep: 0.0005     #0.0001               # set the simulation timestep - this attribute is critical to simulation success
   visualize_contact_force: False                         # toggle on / off to visualize contact forces
   visualize_perturbation_force: False                    # toggle on / off to visualize perturbation forces
@@ -31,6 +28,31 @@ config:
   camera_lookat_xyz: '0.012768, -0.000000, 1'           # configure the (x,y,z) coordinates that the camera looks at in simulation
 
 
+  # Updated perturbation configuration
+  apply_perturbation: True
+  perturbation_type: "impulse"  # Options: "none", "impulse", "sinusoidal", "step", "random"
+  
+  # Impulse perturbation parameters
+  perturbation_magnitude: 100
+  perturbation_time: 0.3
+  perturbation_period: 3.25
+  perturbation_direction: null  # null for random direction, 1 or -1 for fixed direction
+  
+  # Sinusoidal perturbation parameters
+  perturbation_amplitude: 50
+  perturbation_frequency: 0.5
+  perturbation_phase: 0
+  
+  # Step perturbation parameters
+  perturbation_start_time: 5.0
+  perturbation_duration: null  # null for continuous until end
+  
+  # Random perturbation parameters
+  perturbation_max_magnitude: 100
+  perturbation_min_duration: 0.2
+  perturbation_max_duration: 1.0
+  perturbation_min_interval: 2.0
+  perturbation_max_interval: 5.0
 
   # New controller configuration section
   controllers:
@@ -43,24 +65,23 @@ config:
       
       # LQR specific parameters
       lqr_params:
-        Q_angle: 500     # State cost for angle
-        Q_velocity: 100   # State cost for velocity
+        Q_angle: 2000     # State cost for angle
+        Q_velocity: 400   # State cost for velocity
         R: 0.01          # Control cost
       
       # PD specific parameters
       pd_params:
-        kp: 800          # Proportional gain
+        kp: 100          # Proportional gain
         kd: 10           # Derivative gain
     
     exo:
-      type: "PD"         # Options: "PD", "GC" (Gravity Compensation)
+      type: "None"         # Options: "PD", "None" 
       max_torque: 50     # Maximum exo torque (Nm)
       
       # PD specific parameters
       pd_params:
-        kp: 300           # Proportional gain
+        kp: 400           # Proportional gain
         kd: 10            # Derivative gain
       
-      # Gravity compensation specific parameters
-      gc_params:
-        compensation_factor: 0.5  # Gravity compensation ratio
+
+  
