--- a/final_humanoid/config.yaml
+++ b/final_humanoid/config.yaml
@@ -2,8 +2,9 @@ config:
   
   ankle_position_setpoint_radians: 0.0872665         # set the ankle joint setpoint in radians
   ankle_initial_position_radians:  0.0872 #0.0872665             # set the initial ankle angle in radians
+
   foot_angle_initial_position_radians: 0                # set the initial angle of the foot
-  simend: 100                                           # set the duration for which the simulation will run
+  simend: 10                                           # set the duration for which the simulation will run
   M_total: 80                                           # total mass of the human, used for literature estimate calculations
   H_total: 1.78                                         # total height of the human, used for literature estimtae calculations
   mp4_file_name: 'pert_with_contact_force_vis.mp4'      # file name for mp4 file to be saved to, if you want to record the simultation rendering
@@ -13,8 +14,9 @@ config:
   rolling_friction_constant: 0.99                       # set the rolling friction constant for model geoms
   xml_path: 'initial_humanoid.xml'                      # set the file path that the run_sim.py script will read and modify with literature estimates
   lit_xml_file: 'literature_humanoid.xml'               # set file path that run_sim.py will save literature estimate XML file too; this is loaded into the MuJoCo backend
-  plotter_flag: True                                 # toggle the Python plotters on / off
+  plotter_flag: False                                 # toggle the Python plotters on / off
   simulation_timestep: 0.0005     #0.0001               # set the simulation timestep - this attribute is critical to simulation success
+  visualization_flag: True  # Enable/disable MuJoCo 3D visualization
   visualize_contact_force: False                         # toggle on / off to visualize contact forces
   visualize_perturbation_force: False                    # toggle on / off to visualize perturbation forces
   visualize_joints: False                               # toggle on / off to visualize model joints
