--- a/final_humanoid/config.yaml
+++ b/final_humanoid/config.yaml
@@ -1,12 +1,12 @@
 config:
   
   ankle_position_setpoint_radians: 0.0872665         # set the ankle joint setpoint in radians
-  ankle_initial_position_radians:  0.0872 #0.0872665             # set the initial ankle angle in radians
+  ankle_initial_position_radians:  0.087 #0.0872665             # set the initial ankle angle in radians
 
   foot_angle_initial_position_radians: 0                # set the initial angle of the foot
-  simend: 10                                           # set the duration for which the simulation will run
-  M_total: 80                                           # total mass of the human, used for literature estimate calculations
-  H_total: 1.78                                         # total height of the human, used for literature estimtae calculations
+  simend: 20                                           # set the duration for which the simulation will run
+  M_total: 60                                           # total mass of the human, used for literature estimate calculations
+  H_total: 1.59                                         # total height of the human, used for literature estimtae calculations
   mp4_file_name: 'pert_with_contact_force_vis.mp4'      # file name for mp4 file to be saved to, if you want to record the simultation rendering
   mp4_fps: 60                                           # video fps
   mp4_flag: False                                      # toggle this parameter on / off to save an mp4 video with name "mp4_file_name" (two lines up)
@@ -14,7 +14,7 @@ config:
   rolling_friction_constant: 0.99                       # set the rolling friction constant for model geoms
   xml_path: 'initial_humanoid.xml'                      # set the file path that the run_sim.py script will read and modify with literature estimates
   lit_xml_file: 'literature_humanoid.xml'               # set file path that run_sim.py will save literature estimate XML file too; this is loaded into the MuJoCo backend
-  plotter_flag: False                                 # toggle the Python plotters on / off
+  plotter_flag: True                                 # toggle the Python plotters on / off
   simulation_timestep: 0.0005     #0.0001               # set the simulation timestep - this attribute is critical to simulation success
   visualization_flag: True  # Enable/disable MuJoCo 3D visualization
   visualize_contact_force: False                         # toggle on / off to visualize contact forces
@@ -60,10 +60,10 @@ config:
   controllers:
     human:
       type: "LQR"  # Options: "LQR", "PD"
-      max_torque_df: 43    # Maximum dorsiflexion torque (Nm)
-      max_torque_pf: -181  # Maximum plantarflexion torque (Nm)
-      mrtd_df: 309        # Maximum rate of torque development for dorsiflexion (Nm/s)
-      mrtd_pf: 957        # Maximum rate of torque development for plantarflexion (Nm/s)
+      max_torque_df: 22    # Maximum dorsiflexion torque (Nm)
+      max_torque_pf: -88  # Maximum plantarflexion torque (Nm)
+      mrtd_df: 128        # Maximum rate of torque development for dorsiflexion (Nm/s)
+      mrtd_pf: 389        # Maximum rate of torque development for plantarflexion (Nm/s)
       
       # LQR specific parameters
       lqr_params:
@@ -77,11 +77,12 @@ config:
         kd: 10           # Derivative gain
     
     exo:
-      type: "None"         # Options: "PD", "None" 
+      type: "PD"         # Options: "PD", "None" 
       max_torque: 50     # Maximum exo torque (Nm)
       
       # PD specific parameters
       pd_params:
+        use_dynamic_gains: true  # New flag to indicate we want to use calculated gains
         kp: 400           # Proportional gain
         kd: 10            # Derivative gain
       
