--- a/final_humanoid/config.yaml
+++ b/final_humanoid/config.yaml
@@ -1,10 +1,16 @@
 config:
   
-  ankle_position_setpoint_radians: 0.0872665         # set the ankle joint setpoint in radians
-  ankle_initial_position_radians:  0.087 #0.0872665             # set the initial ankle angle in radians
+  ankle_position_setpoint_radians: 0.0       # set the ankle joint setpoint in radians
+  ankle_initial_position_radians:  -0.05 #0.0872665             # set the initial ankle angle in radians
+
+  # # Initial velocities
+  foot_rotation_initial_velocity: 0.0
+  foot_x_initial_velocity: 0.0
+  foot_z_initial_velocity: 0.0
+  ankle_initial_velocity: 0.0  # Example: Set initial ankle velocity to 0.2 rad/s
 
   foot_angle_initial_position_radians: 0                # set the initial angle of the foot
-  simend: 20                                           # set the duration for which the simulation will run
+  simend: 5                                           # set the duration for which the simulation will run
   M_total: 60                                           # total mass of the human, used for literature estimate calculations
   H_total: 1.59                                         # total height of the human, used for literature estimtae calculations
   mp4_file_name: 'pert_with_contact_force_vis.mp4'      # file name for mp4 file to be saved to, if you want to record the simultation rendering
