Fixed the bug that prevented mrtd from working properly in mujoco.

--- a/final_humanoid/config.yaml
+++ b/final_humanoid/config.yaml
@@ -1,21 +1,21 @@
 config:
   
   ankle_position_setpoint_radians: 0.0       # set the ankle joint setpoint in radians
-  ankle_initial_position_radians:  -0.02 #0.0872665             # set the initial ankle angle in radians
+  ankle_initial_position_radians:  -0.03 #0.0872665             # set the initial ankle angle in radians
 
   # # Initial velocities
   foot_rotation_initial_velocity: 0.0
   foot_x_initial_velocity: 0.0
   foot_z_initial_velocity: 0.0
-  ankle_initial_velocity: 0.2  # Example: Set initial ankle velocity to 0.2 rad/s
+  ankle_initial_velocity: 0.3  # Example: Set initial ankle velocity to 0.2 rad/s
 
   foot_angle_initial_position_radians: 0                # set the initial angle of the foot
-  simend: 5                                           # set the duration for which the simulation will run
+  simend: 10                                           # set the duration for which the simulation will run
   M_total: 60                                           # total mass of the human, used for literature estimate calculations
   H_total: 1.59                                         # total height of the human, used for literature estimtae calculations
-  mp4_file_name: 'pert_with_contact_force_vis.mp4'      # file name for mp4 file to be saved to, if you want to record the simultation rendering
+  mp4_file_name: 'LQR_PDexo_unbalance.mp4'      # file name for mp4 file to be saved to, if you want to record the simultation rendering
   mp4_fps: 60                                           # video fps
-  mp4_flag: False                                      # toggle this parameter on / off to save an mp4 video with name "mp4_file_name" (two lines up)
+  mp4_flag: True                                      # toggle this parameter on / off to save an mp4 video with name "mp4_file_name" (two lines up)
   translation_friction_constant: 0.99                   # set the translationl friction constant for model geoms
   rolling_friction_constant: 0.99                       # set the rolling friction constant for model geoms
   xml_path: 'initial_humanoid.xml'                      # set the file path that the run_sim.py script will read and modify with literature estimates
@@ -65,7 +65,7 @@ config:
   # New controller configuration section
   controllers:
     human:
-      type: "Precomputed"  # Options: "LQR", "PD", "Precomputed"
+      type: "LQR"  # Options: "LQR", "PD", "Precomputed"
       max_torque_df: 22    # Maximum dorsiflexion torque (Nm)
       max_torque_pf: -88  # Maximum plantarflexion torque (Nm)
       mrtd_df: 148        # Maximum rate of torque development for dorsiflexion (Nm/s)
@@ -73,9 +73,9 @@ config:
       
       # LQR specific parameters
       lqr_params:
-        Q_angle: 2000     # State cost for angle
-        Q_velocity: 400   # State cost for velocity
-        R: 0.01          # Control cost
+        Q_angle: 1000     # State cost for angle
+        Q_velocity: 4000   # State cost for velocity
+        R: 1          # Control cost
       
       # PD specific parameters
       pd_params:
@@ -87,7 +87,7 @@ config:
         trajectory_file: "ankle_torque_trajectory.csv"
 
     exo:
-      type: "None"         # Options: "PD", "None" 
+      type: "PD"         # Options: "PD", "None" 
       max_torque: 50     # Maximum exo torque (Nm)
       
       # PD specific parameters
