Simplify the structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 joint1_humanoid/StabilizableRegions_Standing_with_AnkleExo_TNSRE-9.pdf
 joint1_humanoid/results/
+joint1_humanoid/data/
 joint2_humanoid/results/
+joint2_humanoid/data/
