--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ joint1_humanoid/results/
 joint1_humanoid/data/
 joint2_humanoid/results/
 joint2_humanoid/data/
+joint1_humanoid/__pycache__/
+joint2_humanoid/__pycache__/
