--- a/joint1_humanoid/config.yaml
+++ b/joint1_humanoid/config.yaml
@@ -1,6 +1,6 @@
 config: 
   # Simulation parameters
-  simend: 10                                           # set the duration for which the simulation will run
+  simend: 6                                           # set the duration for which the simulation will run
   simulation_timestep: 0.0005                          # set the simulation timestep - this attribute is critical to simulation success
   visualization_flag: True                             # Enable/disable MuJoCo 3D visualization
   
@@ -26,13 +26,13 @@ config:
   # Controller configuration
   controllers:
     human:
-      type: "PD"                                      # Options: "LQR", "PD", "Precomputed"
+      type: "LQR"                                      # Options: "LQR", "PD", "Precomputed"
       
       # LQR specific parameters
       lqr_params:
-        Q_angle: 3000                                  # State cost for angle
-        Q_velocity: 400                                # State cost for velocity
-        R: 0.01                                         # Control cost
+        Q_angle: 1000                                  # State cost for angle
+        Q_velocity: 4000                                # State cost for velocity
+        R: 1                                         # Control cost
       
       # PD specific parameters
       pd_params:
@@ -44,13 +44,13 @@ config:
         trajectory_file: "ankle_torque_trajectory.csv"
 
     exo:
-      type: "None"                                       # Options: "PD", "None" 
- 
+      type: "PD"                                       # Options: "PD", "None" 
+      
       # PD specific parameters
       pd_params:
-        use_dynamic_gains: false                        # New flag to indicate we want to use calculated gains
-        kp: 800                                        # Proportional gain
-        kd: 100                                         # Derivative gain
+        use_dynamic_gains: true                        # New flag to indicate we want to use calculated gains
+        kp: 400                                        # Proportional gain
+        kd: 10                                         # Derivative gain
 
   # Visualization settings
   camera_azimuth: 87.5                                 # set camera azimuth 
