Debug interpolation and Test different timesteps in MATLAB

--- a/joint1_humanoid/config.yaml
+++ b/joint1_humanoid/config.yaml
@@ -41,7 +41,7 @@ config:
     
       # Precomputed specific parameters
       precomputed_params:
-        trajectory_file: "ankle_torque_trajectory.csv"
+        trajectory_file: "pre_traj/ankle_torque_trajectory.csv"
 
     exo:
       type: "PD"                                       # Options: "PD", "None" 
